[ADD] Allow file upload when creating a comment